--- a/AgeAnalysis.ipynb
+++ b/AgeAnalysis.ipynb
@@ -62,23 +62,18 @@
    "source": [
     "# Lets define the functions that we will need first\n",
     "def plot_features(X, feature_list):\n",
-    "    \"\"\"\n",
-    "    Plotting features\n",
-    "    \"\"\"\n",
+    "    \"\"\"plotting features in a histogram\"\"\"\n",
     "    for feat in feature_list:\n",
     "        plt.hist(X[feat], 32)\n",
     "        plt.xlabel(feat)\n",
     "        plt.show()\n",
     "        \n",
     "def get_cardio_probability(df, feat_name, bin_centers):\n",
-    "    \"\"\"\n",
-    "    calculating cardio probability\n",
-    "    \n",
-    "    \"\"\"\n",
+    "    \"\"\"calculating the probability of heart disease \"\"\"\n",
     "    gap = bin_centers[1] - bin_centers[0]\n",
     "    list_prob = []\n",
     "    for bin in bin_centers:\n",
-    "        truncated_data = filter_feature(df, feat_name, bin - gap/2, bin + gap/2) #calling filter_feature and getting a desginated chunk\n",
+    "        truncated_data = filter_feature(df, feat_name, bin - gap/2, bin + gap/2) #calling filter_feature and getting a designated chunk\n",
     "        number_heart_failure = sum(truncated_data['cardio']) #calculating number of people who have heart failure\n",
     "        total_cases = len(truncated_data[\"cardio\"]) #number of total cases\n",
     "        list_prob.append(number_heart_failure/total_cases) #calculating the probability\n",
