--- a/AgeAnalysis.ipynb
+++ b/AgeAnalysis.ipynb
@@ -80,9 +80,7 @@
     "    return list_prob    \n",
     "\n",
     "def filter_feature(dataframe, column_name,  threshold_low, threshold_hi):\n",
-    "    \"\"\"\n",
-    "    removes outliers\n",
-    "    \"\"\"\n",
+    "    \"\"\"removes outliers for a specific column\"\"\"\n",
     "    x = dataframe[column_name]\n",
     "    cond1 = x>threshold_low\n",
     "    cond2 = x<threshold_hi\n",
