changed plot name
changed plot name

--- a/AgeAnalysis.ipynb
+++ b/AgeAnalysis.ipynb
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -150,9 +150,16 @@
     "plt.xlabel('Age')\n",
     "plt.ylabel('Risk Factor, age 40 = 1')\n",
     "plt.legend([\"All\", \"Female\", \"Male\"])\n",
-    "plt.savefig(\"Risk of Heart Failure Vs. Age\" + '.png', bbox_inches='tight')\n",
+    "#plt.savefig(\"Risk of Heart Failure Vs. Age\" + '.png', bbox_inches='tight')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
