--- a/DataPreprocessing.ipynb
+++ b/DataPreprocessing.ipynb
@@ -75,7 +75,7 @@
     "    Removes outliers\n",
     "\n",
     "    \"\"\"\n",
-    "    low_valid = dataframe[column_name] > threshold_low   #creating a desginated chunk to remove\n",
+    "    low_valid = dataframe[column_name] > threshold_low  \n",
     "    hi_valid = dataframe[column_name] < threshold_hi\n",
     "    column_valid = [a and b for a,b in zip(low_valid,hi_valid)]\n",
     "    truncated_data = dataframe[column_valid]\n",
